<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiviteCreationCompte">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/creation_compte_champ_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creation_compte_champ_nom"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/creation_compte_champ_pseudoynme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creation_compte_champ_pseudonyme"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/creation_compte_champ_mot_de_passe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creation_compte_champ_mot_de_passe"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/creation_compte_champ_mot_de_passe_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creation_compte_champ_mot_de_passe_2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bouton_creation_compte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/texte_bouton_creation_compte"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/creation_compte_affichage_erreurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#f00" />

</LinearLayout>