<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActiviteParametresModifierInfosCompte">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nom d'utilisateur" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/param_modifier_infos_compte_champ_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nav_header_title"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Mot de passe" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/param_modifier_infos_compte_champ_mdp_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creation_compte_champ_mot_de_passe"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/param_modifier_infos_compte_champ_mdp_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_creation_compte_champ_mot_de_passe_2"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bouton_param_valider_modification_infos_compte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Valider les modifications" />

    <TextView
        android:id="@+id/param_compte_affichage_erreurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#f00"/>

</LinearLayout>